# PSCR-TME

./: .clang-format  .clang-tidy  .gitignore  orale.md
TME1/MyString/: CMakeLists.txt  main.cpp
TME1/MyString/src/: MyLib.cpp  MyLib.hpp  MyString.cpp  MyString.hpp
TME1/exo1/src/: List.cpp  List.h  Makefile.am  main.cpp
TME2/tme2/: CMakeLists.txt  main.cpp
TME2/tme2/src/: HashMap.hpp
TME4/: CMakeLists.txt
TME4/src/: Banque.cpp  Banque.h  Compte.cpp  Compte.h  main.cpp
TME5/: CMakeLists.txt  _20241212__100000sphere_10x10.csv  _20241212__10000sphere_10x10.csv  _20241212__1000sphere_10x10.csv  _20241212__10sphere_10x10.csv  analyse.py  execution_results_100000s_100x100.csv  execution_results_10000sphere_100x100.csv  execution_results_1000s_1000x1000.csv  execution_results_1000s_100x100.csv  run_benchmark.sh  setup_benchmark.sh
TME5/analyse/: benchmark_tuxedo_martin_100000sphere_100x100.csv  benchmark_tuxedo_martin_10000sphere_100x100.csv  benchmark_tuxedo_martin_1000sphere_1000x1000.csv  benchmark_tuxedo_martin_10sphere_1000x1000.csv  benchmark_tuxedo_martin_20241212_100000sphere_100x100.csv  benchmark_tuxedo_martin_20241212_10000sphere_100x100.csv  benchmark_tuxedo_martin_20241212_1000sphere_1000x1000.csv  benchmark_tuxedo_martin_20241212_10sphere_1000x1000.csv  benchmark_tuxedo_martin_50w_20241212_100000sphere_100x100.csv  benchmark_tuxedo_martin_50w_20241212_10000sphere_100x100.csv  benchmark_tuxedo_martin_50w_20241212_1000sphere_1000x1000.csv  benchmark_tuxedo_martin_50w_20241212_10sphere_1000x1000.csv  benchmark_tuxedo_martin_50w_4hz_20241212_100000sphere_100x100.csv  benchmark_tuxedo_martin_50w_4hz_20241212_10000sphere_100x100.csv  benchmark_tuxedo_martin_50w_4hz_20241212_1000sphere_1000x1000.csv  benchmark_tuxedo_martin_50w_4hz_20241212_10sphere_1000x1000.csv  benchmark_tuxedo_martin_v2_100000sphere_100x100.csv  benchmark_tuxedo_martin_v2_10000sphere_100x100.csv  benchmark_tuxedo_martin_v2_1000sphere_1000x1000.csv  benchmark_tuxedo_martin_v2_10sphere_1000x1000.csv
TME5/src/: main.cpp
TME5/src/lib/private/: Color.cpp  Vec3D.cpp
TME5/src/lib/public/: Color.hpp  Job.hpp  Pool.hpp  Queue.hpp  Rayon.hpp  Scene.hpp  Sphere.hpp  Utils.hpp  Vec3D.hpp
TME6/: CMakeLists.txt
TME6/src/: fork_exo.cpp  main.cpp  rsleep.cpp  rsleep.h
TME7/: CMakeLists.txt
TME7/src/: Stack.h  pipe.cpp  prod_cons.cpp
TME7/src/pipe/: pipe.cpp
TME7/src/prod_cons/: Stack.h  prod_cons.cpp
TME8/: CMakeLists.txt  ServerSocket.cpp
TME8/src/: ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  client.cpp  server.cpp
lib/: CMakeLists.txt
lib/src/private/: Core.cpp  HashTable.cpp  List.cpp  String.cpp  Vector.cpp
lib/src/public/: Assert.hpp  Core.hpp  HashTable.hpp  List.hpp  String.hpp  Vector.hpp
lib/test/: CoreTest.cpp  HashTableTest.cpp  IteratorTest.cpp  ListTest.cpp  StringTest.cpp  VectorTest.cpp
